# ampere-misc

./: LICENSE  README.md  meson.build  meson.options  meson_options.txt
ampere-cpld-fwupdate/: LICENSE  meson.build
ampere-cpld-fwupdate/include/: ast-jtag.h  cpld.h  i2c-lib.h  lattice.h
ampere-cpld-fwupdate/src/: anlogic.c  ast-jtag.c  cpld.c  cpldupdate-i2c.c  cpldupdate-jtag.c  i2c-lib.c  lattice.c
ampere-trst-wa/: LICENSE  meson.build
driver-binder/: driver-binder.cpp
mctp-ctrl/: LICENSE  mctpCtrl.cpp  meson.build  meson_options.txt
nmi-manager/: nmi_interface.cpp  xyz.openbmc_project.nmi.manager.service
peripheral-manager/: peripheral-manager.cpp  peripheral-manager.hpp
state-logger/: LICENSE  xyz.openbmc_project.state_logger.service
subprojects/ac01-nvparm/: meson.build  nvparm.c
subprojects/altra-host-error-monitor/: altra-host-error-monitor.cpp  config.json  meson.build  xyz.openbmc_project.altra_host_error_monitor.service
subprojects/altra-host-error-monitor/include/: internalErrors.hpp  selUtils.hpp  utils.hpp
subprojects/ampere-cpld-fwupdate/include/: anlogic.h  ast-jtag-intf.h  ast-jtag.h  cpld.h  i2c-lib.h  jtag.h  lattice.h
subprojects/ampere-cpld-fwupdate/src/: anlogic.c  ast-jtag-intf.c  ast-jtag.c  cpld.c  cpldupdate-i2c.c  cpldupdate-jtag.c  i2c-lib.c  lattice.c
subprojects/ampere-cpu-present/: ampereCpuPresent.cpp  meson.build  xyz.openbmc_project.Ampere.CpuPresent.service
subprojects/ampere-trst-wa/: ampere-trst-wa.c  ampere-trst-wa.service.in  meson.build
subprojects/crash-capture-manager/: bert.hpp  bert_handler.cpp  com.ampere.crashcapture.manager.service  crash_capture_interface.cpp  crash_capture_interface.hpp  crash_capture_main.cpp  meson.build  meson.options  meson_options.txt  utils.cpp  utils.hpp
subprojects/flash-utils/: ampere_eeprom_prog.c  ampere_fru_upgrade.c  meson.build
subprojects/mctp-ctrl/: ampere_s1_ready.sh  ampere_slave_present.sh  mctpCtrl.cpp  meson.build  xyz.openbmc_project.AmpereMctpCtrl.service
subprojects/nmi-manager/: meson.build  meson_options.txt  nmi.cpp  nmi.service  nmi_interface.cpp  nmi_interface.hpp  xyz.openbmc_project.nmi.manager.service
subprojects/peripheral-manager/: meson.build  peripheral-manager.cpp
subprojects/power-manager/: meson.build  meson_options.txt  power-cap-action-oem.service  power-limit-oem@.service  power-manager-cfg.json  power_manager_main.cpp  xyz.openbmc_project.power.manager.service
subprojects/power-manager/include/: power_cap_interface.hpp  power_limit_interface.hpp  power_manager.hpp
subprojects/power-manager/script/: power_limit_oem.sh
subprojects/power-manager/service/: meson.build  power-cap-drops-below-limit.service  power-cap-exceeds-limit.service
subprojects/power-manager/src/: power_cap_interface.cpp  power_limit_interface.cpp  power_manager.cpp
subprojects/state-logger/: ampere-state-logger.cpp  meson.build  xyz.openbmc_project.state_logger.service
