option(
    'nmi-manager',
    type : 'feature',
    value : 'disabled',
    description : 'Enable building nmi-manager'
)

option(
    'ampere-cpld-fwupdate',
    type : 'feature',
    value : 'disabled',
    description : 'Enable building ampere-cpld-fwupdate'
)

option(
    'state-logger',
    type : 'feature',
    value : 'disabled',
    description : 'Enable building state-logger'
)

option(
    'ampere-trst-wa',
    type : 'feature',
    value : 'disabled',
    description : 'Enable building ampere-trst-wa'
)

option(
    'power-manager',
    type : 'feature',
    value : 'disabled',
    description : 'Enable building power-manager'
)

option(
    'crash-capture-manager',
    type : 'feature',
    value : 'disabled',
    description : 'Enable building crash-capture-manager'
)

option(
    'ampere-cpu-present',
    type : 'feature',
    value : 'disabled',
    description : 'Enable building ampere-cpu-present'
)

option(
    'altra-host-error-monitor',
    type : 'feature',
    value : 'disabled',
    description : 'Enable building altra-host-error-monitor'
)
